--- a/README.me
+++ b/README.me
@@ -18,6 +18,6 @@ Css puro.
 Se consumio la siguiente API para la info de los tipos de cafe:
 https://sampleapis.com/api-list/coffee
 
-Gracias por visitar el proyeto.
+Gracias por visitar el proyecto.
 
 Caloni Luciana.
